<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lux Novel</string>
    <string name="image">Image</string>
    <string name="temp">Temp</string>

    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>

    <string name="navigate">Navigate</string>
    <string name="personalize">Personalize</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="api">Api</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="name">Name</string>
    <string name="update_account">Update Account</string>
    <string name="username_annotation">Username Annotation</string>
    <string name="password_annotation">Password Annotation</string>
    <string name="email_annotation">Email Annotation</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_question">Create an Account</string>
    <string name="login_question">Already Have an Account</string>
    <string name="remember">Remember Account</string>
    <string name="recover_password">Recover Password</string>
    <string name="or">or</string>

    <string name="continue_story">Continue Your Story</string>
    <string name="top_stories">Top Rated Stories</string>
    <string name="editor_picks">Editor\'s Picks</string>

    <string name="novel">Novel</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="state">State</string>
    <string name="description">Description</string>
    <string name="novel_name">Novel Name</string>
    <string name="novel_author">Novel Author</string>
    <string name="novel_category">Novel Category</string>
    <string name="novel_state">Novel State</string>
    <string name="novel_description">Novel Description</string>
    <string name="novel_rating">Novel Rating</string>

    <string name="comment">Comment</string>
    <string name="rating">Rating</string>
    <string name="comment_user">Comment User</string>
    <string name="comment_rating">Comment Rating</string>
    <string name="comment_rating_number">0.0</string>
    <string name="comment_comment">Comment Comment</string>
    <string name="comment_empty">There Is No Comment</string>

    <string name="chapter">Chapter</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="chapter_serial">Chapter Serial</string>
    <string name="chapter_date">Chapter Date</string>
    <string name="chapter_content">Chapter Content</string>

    <string name="author_name">Author Name</string>
    <string name="author_novel">List of Novel</string>

</resources>