<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ActivityForgot"
>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/app_name"
    />

    <EditText
        android:id="@+id/uText_aForgot_Username"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"


        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:drawableStart="@drawable/username"

        android:textSize="20sp"
        android:background="@drawable/border"

        android:autofillHints=""
        android:hint="@string/username"
        android:ems="10"
        android:inputType="text"

        tools:ignore="LabelFor,VisualLintTextFieldSize,TextContrastCheck,TouchTargetSizeCheck"
    />

    <TextView
        android:id="@+id/vText_aForgot_UsernameAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"
        android:textSize="12sp"
        android:textColor="@color/error_red"
        android:text="@string/username_annotation"
        tools:ignore="TextContrastCheck"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/or"
    />

    <EditText
        android:id="@+id/uText_aForgot_Email"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:drawableStart="@drawable/email"

        android:textSize="20sp"
        android:background="@drawable/border"

        android:autofillHints=""
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"

        tools:ignore="LabelFor,VisualLintTextFieldSize,TextContrastCheck,TouchTargetSizeCheck"
    />

    <TextView
        android:id="@+id/vText_aForgot_EmailAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"
        android:textSize="12sp"
        android:textColor="@color/error_red"
        android:text="@string/email_annotation"
        tools:ignore="TextContrastCheck"
    />

    <Button
        android:id="@+id/uButton_aForgot_RecoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:text="@string/recover_password"
        android:background="@drawable/border"
        tools:ignore="VisualLintButtonSize"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/or"
    />

    <TextView
        android:id="@+id/vText_aForgot_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/hyperlink_blue"
        android:text="@string/register_question"
    />

</LinearLayout>