<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/lDrawer_aRead_Drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:openDrawer="right"
    android:fitsSystemWindows="true"

    tools:context="Activity.ActivityRead"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/uToolbar_aRead_Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@drawable/menu"
                app:title="@string/read"
            />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/vImage_fNovel_Cover"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:contentDescription="@string/image"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars"
                    />

                <TextView
                    android:id="@+id/vText_fNovel_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/novel_name"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:text="@string/author"
                        />

                    <TextView
                        android:id="@+id/vText_fNovel_Author"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/hyperlink_blue"
                        android:text="@string/novel_author"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:text="@string/category"
                        />

                    <TextView
                        android:id="@+id/vText_fNovel_Category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/hyperlink_blue"
                        android:text="@string/novel_category"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:text="@string/state"
                        />

                    <TextView
                        android:id="@+id/vText_fNovel_State"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/novel_state"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/description"
                    />

                <TextView
                    android:id="@+id/vText_fNovel_Description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/novel_description"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/chapter"
                    />

                <ListView
                    android:id="@+id/vList_fNovel_Chapter"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    android:nestedScrollingEnabled="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/comment"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:text="@string/rating"
                        />

                    <TextView
                        android:id="@+id/vText_fNovel_Rating"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/novel_rating"
                        />

                </LinearLayout>

                <ListView
                    android:id="@+id/vList_fNovel_Comment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    android:nestedScrollingEnabled="true"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/vNavigation_aRead_Navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        app:headerLayout="@layout/header_header"
        app:menu="@menu/menu_drawer"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"

        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    />

</androidx.drawerlayout.widget.DrawerLayout>