<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >

        <ImageView
            android:id="@+id/vImage_fNovel_Cover"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/image"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
        />

        <TextView
            android:id="@+id/vText_fNovel_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/novel_name"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
        >

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/author"
            />

            <TextView
                android:id="@+id/vText_fNovel_Author"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/novel_author"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
        >

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/category"
            />

            <TextView
                android:id="@+id/vText_fNovel_Category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/novel_category"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
        >

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/state"
            />

            <TextView
                android:id="@+id/vText_fNovel_State"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/novel_state"
            />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/description"
        />

        <TextView
            android:id="@+id/vText_fNovel_Description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/novel_description"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/chapter"
        />

        <ListView
            android:id="@+id/vList_fNovel_Chapter"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="true"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/comment"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
        >

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/rating"
            />

            <TextView
                android:id="@+id/vText_fNovel_Rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/novel_rating"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Comment :" />

            <EditText
                android:id="@+id/txt_Comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter Comment..."
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Đánh giá :" />

            <RatingBar
                android:id="@+id/rb_DanhGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressBackgroundTint="#ACACA6"
                android:progressTint="#ff0"
                android:rating="0"
                android:secondaryProgressTint="@color/black"
                android:stepSize="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_NoComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Chưa có bình luận nào " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_SendComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Submit" />
        </LinearLayout>

        <ListView
            android:id="@+id/vList_fNovel_Comment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="true"
        />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>